Docs: Improve indentation in Parser class